--- a/grundgerüst.html
+++ b/grundgerüst.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <!-- für später: CSS include -->
-    <!-- <link rel="stylesheet" href="XXX.css"/> -->
+    link rel="stylesheet" href="styles.css"
     <!-- für später: JavaScript include -->
     <!-- <script src="XXX.js"></script> -->
     <title>Text des Titels</title>
