--- a/grundgerüst.html
+++ b/grundgerüst.html
@@ -2,14 +2,22 @@
 <!DOCTYPE html>
 <html lang="de">  
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" /> 
     <!-- für später: CSS include -->
-    link rel="stylesheet" href="styles.css"
+    <link rel="stylesheet" href="styles.css">
+
     <!-- für später: JavaScript include -->
     <!-- <script src="XXX.js"></script> -->
-    <title>Text des Titels</title>
+    <title>Bestellseite</title>
 </head>
 <body>
-    <p>Eigentlicher Inhalt</p>
+    <h1>Bestellung</h1>
+    <section>
+            <section>
+                <h1>Speisekarte</h1>
+                <img class = "foodPics" src="images/Pizza-Margherita-4bb0ecf864075.webp" >
+            </section>
+    </section>
+    
 </body>
 </html>
