--- a/grundgerüst.html
+++ b/grundgerüst.html
@@ -16,6 +16,8 @@
             <section>
                 <h1>Speisekarte</h1>
                 <img class = "foodPics" src="images/Pizza-Margherita-4bb0ecf864075.webp" >
+                <img class = "foodPics" src="images/Pizza-Margherita-4bb0ecf864075.webp" >
+                <img class = "foodPics" src="images/Pizza-Margherita-4bb0ecf864075.webp" >
             </section>
     </section>
     
