--- a/grundgerüst.html
+++ b/grundgerüst.html
@@ -45,16 +45,19 @@
 
             <h1>Warenkorb</h1>
                 <section>
+                    <form>
                     <select name="top3[]" size="3" multiple>
                         <option selected>   Margherita</option>
                         <option>            Salami</option>
                         <option>            Hawaii</option>
                     </select>
+                    <input type="reset" value="Auswahl Löschen"/>
+                    </form>
                 </section>
                 <br>
                 <section>
                     <label>Gesamtpreis:
-                        <output></output>  
+                        <output>14.50€</output>  
                     </label>
                 </section>
                 <br>
@@ -77,6 +80,7 @@
                         </label>
                         <br>
                         <input type="reset" value="Alle Löschen"/>
+                         
                         <input type="submit" value="Bestellen"/>                        
                     </form>
                 </fieldset>
