--- a/grundgerüst.html
+++ b/grundgerüst.html
@@ -51,7 +51,7 @@
                 <br>
                 <label>
                     <span>Nachname:</span> <br>
-                    <input type="text" id="Nachname" name="Nachname" value="" placeholder="Ihr Nachname" maxlength="15" required/>
+                    <input type="text" id="Nachname" name="Nachname" value="" placeholder="Ihr Nachname" maxlength="15" required>
                 </label>
                 <br>
                 <label>
