--- a/pizzabaecker.html
+++ b/pizzabaecker.html
@@ -20,7 +20,7 @@
                 <li><a href="bestellung.php">Bestellung</a></li>
                 <li><a href="kunde.php">Kunde</a></li>
                 <li class="active"><a href="pizzabaecker.html">Pizzabäcker</a></li>
-                <li><a href="fahrer.html">Fahrer</a></li>
+                <li><a href="fahrer.php">Fahrer</a></li>
             </ul>
 
          </nav>
